workspace = { members = ["macros"] }

[package]
name = "zonbi"
version = "0.1.0"
authors = ["DasLixou"]
edition = "2021"
description = "Type-Erase tools for of non-`'static` types"
repository = "https://github.com/DasLixou/zonbi"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
zonbi_macros = { path = "macros", version = "0.1.0" }
