[package]
name = "zonbi_macros"
version = "0.1.0"
authors = ["DasLixou"]
edition = "2021"
description = "Proc-Macros for `zonbi`"
repository = "https://github.com/DasLixou/zonbi"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.79"
